<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ExamineApproveMain</class>
 <widget class="QWidget" name="ExamineApproveMain">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>749</width>
    <height>460</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>ExamineApproveMain</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_3">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QLabel" name="label">
         <property name="text">
          <string>审批列表</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QTableWidget" name="examineApproveTable"/>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
        <widget class="QLabel" name="label_2">
         <property name="text">
          <string>相关信息</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QTableWidget" name="infoTable"/>
       </item>
      </layout>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="buttton_agree">
       <property name="text">
        <string>同意</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="button_disagree">
       <property name="text">
        <string>不同意</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources/>
 <connections/>
</ui>
